--- a/index.html
+++ b/index.html
@@ -20,37 +20,119 @@
       <header id="open" class="header">
         <div id="close" class="header__container">
           <a href="" class="header__logo">
-            <img src="img/logo.svg" alt="" />
+            <img src="img/logo.svg" alt="Логотип" />
           </a>
           <div class="header__menu menu">
             <nav class="menu__body">
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a href="" class="menu__link">HOME</a>
-              </li>
-              <li class="menu__item">
-                <a href="" class="menu__link">FEATURES</a>
-              </li>
-              <li class="menu__item">
-                <a href="" class="menu__link">SUPPORT</a>
-              </li>
-              <li class="menu__item">
-                <a href="" class="menu__link">CONTACT US</a>
-              </li>
-            </ul>
-          </nav>
-         
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="" class="menu__link">HOME</a>
+                </li>
+                <li class="menu__item">
+                  <a href="" class="menu__link">FEATURES</a>
+                </li>
+                <li class="menu__item">
+                  <a href="" class="menu__link">SUPPORT</a>
+                </li>
+                <li class="menu__item">
+                  <a href="" class="menu__link">CONTACT US</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
           <div class="header__button">
             <a href="" class="button button_blue">DOWNLOAD</a>
-            <a href="#open"  class="icon-menu"><span></span></a>
-            <a href="#close"  class="close-icon-menu"></a>
+            <a href="#open" class="icon-menu"><span></span></a>
+            <a href="#close" class="close-icon-menu"></a>
           </div>
         </div>
       </header>
-      <main class="main">контент</main>
+      <main class="main">
+        <section class="get-started">
+          <div class="get-started__container">
+            <div class="get-started__content">
+              <div class="get-started__block-text block-text">
+                <h1 class="block-text__title block-text__title_blue">
+                  Take care of yours family’s <span>health.</span>
+                </h1>
+                <div class="block-text__text">
+                  All in one destination for COVID-19 health queries. Consult
+                  10,000+ health workers about your concerns.
+                </div>
+                <a href="" class="block-text__button button">GET STARTED</a>
+              </div>
+            </div>
+            <div class="get-started__image">
+              <img
+                src="img/get-started/doctor with patient.svg"
+                alt="Врач с ребенком"
+              />
+            </div>
+            <div class="get-started__video">
+              <a href="" class="video-get-started">
+                <div class="video-get-started__icon">
+                  <img src="img/get-started/video-play.svg" alt="Кнопка Play" />
+                </div>
+                <div class="video-get-started__body">
+                  <div class="video-get-started__title">
+                    Stay safe with GoCorona
+                  </div>
+                  <div class="video-get-started__text">Watch Video</div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </section>
+
+        <section class="stay-safe">
+          <div class="stay-safe__container">
+            <div class="stay-safe__media">
+              <div class="media-stay-safe">
+                <div class="media-stay-safe__image">
+                  <img src="img/stay-safe/app.png" alt="app" />
+                </div>
+
+                <div
+                  class="media-stay-safe__item media-stay-safe__item_1"
+                ></div>
+                <div
+                  class="media-stay-safe__item media-stay-safe__item_2"
+                ></div>
+                <div
+                  class="media-stay-safe__item media-stay-safe__item_3"
+                ></div>
+              </div>
+            </div>
+            <div class="stay-safe__content">
+              <div class="stay-safe__block-text block-text">
+                <h2 class="block-text__title">
+                  Stay safe with Go<span>Corona.</span>
+                </h2>
+                <div class="block-text__text">
+                  24x7 Support and user friendly mobile platform to bring
+                  healthcare to your fingertips. Signup and be a part of the new
+                  health culture.
+                </div>
+                <a href="" class="block-text__button button">Features</a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="experts">
+          <div class="experts__container">
+            <div class="expert__statistics statistics-experts">
+              <div class="statistics-experts__body body-statistic-experts">
+                <div class="body-statistics-experts__item">
+                  <div class="body-statistics-experts__value"></div>
+              
+                <div class="body-statistics-experts__text"></div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+      </main>
       <footer class="footer">футер</footer>
     </div>
   </body>
 </html>
-
-
